--- a/JS 2.html
+++ b/JS 2.html
@@ -3,6 +3,7 @@
 <img src="https://images.unsplash.com/photo-1519058497187-7167f17c6daf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
 <input type="button" id="b1" value="show" >
 <input type="button" id="b2" value="hide" >
+<textarea></textarea>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
