--- a/JS 2.html
+++ b/JS 2.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 <img src="https://images.unsplash.com/photo-1519058497187-7167f17c6daf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80">
+	<textarea></textarea>
 <input type="button" id="b1" value="show" >
 <input type="button" id="b2" value="hide" >
 <textarea></textarea>
@@ -16,6 +17,7 @@ $(document).ready(function(){
 	$("img").show();
    });
 });
+	
 </script>
 </body>
 </html>
