--- a/JS 2.html
+++ b/JS 2.html
@@ -4,6 +4,7 @@
 	<textarea></textarea>
 	<br>
 	<br>
+	abc
 <input type="button" id="b1" value="show" >
 <input type="button" id="b2" value="hide" >
 <textarea></textarea>
